[project]
name = "cyberduel-backend"
version = "0.1.0"
description = "Backend service for CyberDuel Protocol - A peer-to-peer prediction market system"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ilya Istomin", email = "ilyaistom@gmail.com" }
]
keywords = ["prediction-markets", "p2p", "esports", "fastapi"]

dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"